# eec4200

./: .gitignore  README.md  pyproject.toml  requirements.txt
eec4200/: __init__.py  analysis.py  cli.py  constants.py  data.py  model.py  report.py  training.py  utils.py  video.py
scripts/: run_full_gpu_pipeline.sh
src/: EEC4200_CA_2526.docx
