[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eec4200-course-project"
version = "0.1.0"
description = "Course project toolkit for HMDB51-mini and ARID-mini video classification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.5.0",
  "opencv-python-headless>=4.10.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "scikit-learn>=1.5.0",
  "tqdm>=4.66.0",
  "reportlab>=4.2.0",
]

[project.scripts]
eec4200 = "eec4200.cli:main"

[tool.setuptools]
packages = ["eec4200"]
